@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:31:07 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:36:37 +0800</lastBuildDate>
 
   <item>
   <title>K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴、BTS成員V白金認證、Infinite慶祝出道15週年</title>
@@ -25,5 +25,11 @@
   <description>K-pop粉絲遭剝削！海譜等巨頭違法行為罰款僅300萬元，議員轟：懲罰太輕</description>
   <category>K-Pop</category>
   <pubDate>Thu, 10 Oct 2024 16:31:07 +0800</pubDate>
+</item><item>
+  <title>K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作</title>
+  <link>https://www.famechos.me/news/K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作/</link>
+  <description>K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作</description>
+  <category>K-Pop</category>
+  <pubDate>Thu, 10 Oct 2024 16:36:37 +0800</pubDate>
 </item></channel>
 </rss>
