@@ -1,0 +1,267 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop \u754c\u5927\u4e8b\uff01NCT Dream \u5c07\u5728\u9996\u723e\u9ad8\u5c3a\u5929\u7a7a\u5de8\u86cb\u8209\u884c\u4e09\u5834\u6f14\u5531\u6703\u3001G Dragon \u56de\u6b78\u62cd\u651d\u97f3\u6a02\u9304\u5f71\u5e36\u3001Blackpink Jennie \u500b\u4eba\u55ae\u66f2\u9810\u544a\u3001IU \u8207 Billlie \u5408\u4f5c", "description": "K-pop \u754c\u5927\u4e8b\uff01NCT Dream \u5c07\u5728\u9996\u723e\u9ad8\u5c3a\u5929\u7a7a\u5de8\u86cb\u8209\u884c\u4e09\u5834\u6f14\u5531\u6703\u3001G Dragon \u56de\u6b78\u62cd\u651d\u97f3\u6a02\u9304\u5f71\u5e36\u3001Blackpink Jennie \u500b\u4eba\u55ae\u66f2\u9810\u544a\u3001IU \u8207 Billlie \u5408\u4f5c", "url": "https://www.famechos.me/news/K-pop \u754c\u5927\u4e8b\uff01NCT Dream \u5c07\u5728\u9996\u723e\u9ad8\u5c3a\u5929\u7a7a\u5de8\u86cb\u8209\u884c\u4e09\u5834\u6f14\u5531\u6703\u3001G Dragon \u56de\u6b78\u62cd\u651d\u97f3\u6a02\u9304\u5f71\u5e36\u3001Blackpink Jennie \u500b\u4eba\u55ae\u66f2\u9810\u544a\u3001IU \u8207 Billlie \u5408\u4f5c/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-10T16:36:19.340462+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作/"/>
+<meta name="description" content="K-pop 界大事！NCT Dream、G Dragon、Blackpink Jennie、IU 等巨星齊聚一堂，帶來最新的音樂作品和演唱會消息！" />
+<meta name="keywords" content="K-pop,NCT Dream,G Dragon,Blackpink,Jennie,IU,Billlie,首爾高尺天空巨蛋,演唱會,音樂錄影帶,個人單曲" />
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作/" />
+        <meta property="og:title" content="K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作" />
+        <meta property="og:description" content="K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作" />
+        <meta property="twitter:description" content="K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">10/10/2024</p>
+        </div>
+	<p>NCT Dream 將於11月29日至12月1日在首爾高尺天空巨蛋舉行三場演唱會，作為其世界巡迴演唱會的結束。七位成員將在同一舞台上舉行安可演唱會“Finale in Seoul”，這也是他們在五月份啟動巡迴演唱會“The Dream Show 3: Dreamscape”的地方。</p>
+<p>該樂團已經訪問了亞洲八個城市，北美和拉丁美洲十一個城市，並將於10月11日開始在歐洲五個城市進行巡迴演出。成員Renjun預計將加入歐洲巡迴演出，因為他決定全面恢復活動。他因為激進的粉絲行為導致焦慮，已經休息了約六個月。</p>
+<h2>音樂錄影帶拍攝中：G Dragon</h2>
+<p>G Dragon 正在準備進行個人回歸，並於星期一晚上開始拍攝音樂錄影帶，拍攝將持續三天。雖然尚未確認回歸日期，但據悉他的個人演唱會將可能在明年二月份在首爾舉行。</p>
+<p>他的最後一張個人專輯是第二張迷你專輯“Kwon Jiyong”，於2017年六月發行。與此同時，他將與Big Bang成員Taeyang和Daesung一起在2024年MAMA頒獎典禮上表演。</p>
+<h2>Jennie成員預告推出個人單曲</h2>
+<p>Blackpink成員Jennie於星期二上傳預告照片，讓粉絲們感受到她即將發行的個人單曲的味道。她坐在一輛經典白色超級跑車的引擎蓋上，凝視著鏡頭，散發著自信的氣息，並暗示了單曲“Mantra”的情緒。該單曲將於星期五發行，這是她自去年發行特別個人單曲“You & Me”以來的第一首新歌。</p>
+“You & Me”曾登上了iTunes Top Songs榜單的61個地區榜首，並在Spotify的Daily Top Songs榜單上排名第13位，在英國的Official Singles榜單上排名第39位。它還在Billboard的Global 200和Global excl. US榜單上排名第7位和第1位。<h2>IU的音樂成就</h2>
+<p>IU的音樂成就不斷突破新高。四月份，她的第一首個人歌曲“Solo”的音樂錄影帶在YouTube上的觀看次數突破了10億次，成為第一位K-pop女歌手達到此成就。</p>
+<h2>IU與Billlie的合作</h2>
+<p>據報導，IU參與了Billlie即將發行的迷你專輯的製作。該團隊的經紀公司Mystic Story確認了這一消息，並表示IU與Billlie共同創作了該專輯主打歌的歌詞。以下是專輯的詳情：</p>
+<ul>
+<li>專輯名稱：Appendix: Of All We Have Lost</li>
+<li>發行日期：10月16日</li>
+<li>先行曲：Trampoline（星期五發行）</li>
+</ul>
+<h2>迷你專輯：記憶碎片主題</h2>
+<p>這張迷你專輯以記憶碎片為主題，七位成員展現多樣的視覺效果，就像專輯的預告照片一樣。該組合1年半以來首次全員參與的作品，因為Moon Sua和Suhyeon最近恢復了團體活動。每位成員之前都因健康原因暫停活動。</p>
+<p>下一步，該組合將在北美和拉丁美洲的14個城市進行巡演。</p>
+
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zpTogrNQSF8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： Korea Herald</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
