@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:34:30 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:36:37 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -124,5 +124,11 @@
   <description>東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力</description>
   <category>Others</category>
   <pubDate>Thu, 10 Oct 2024 16:34:30 +0800</pubDate>
+</item><item>
+  <title>K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作</title>
+  <link>https://www.famechos.me/news/K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作/</link>
+  <description>K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作</description>
+  <category>K-Pop</category>
+  <pubDate>Thu, 10 Oct 2024 16:36:37 +0800</pubDate>
 </item></channel>
 </rss>
