@@ -138,4 +138,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作/</ns0:loc>
+    <ns0:lastmod>2024-10-10T16:36:37+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
