@@ -53,3 +53,4 @@ https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-early-h
 https://www.koreaherald.com/view.php?ud=20241008050665
 https://tokyocheapo.com/living/moving-to-japan-hacks/
 https://www.koreaherald.com/view.php?ud=20241008050610
+https://tokyocheapo.com/entertainment/movies-theatre/kanda-myojin-show/
